force-app/main/default/objects/Client__c/fields/Tasks_and_Info__c.field-meta.xml
<CustomField>
    <fullName>Tasks_and_Info__c</fullName>
    <label>Tasks and Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>