force-app/main/default/objects/Client__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <label>Total Expenses</label>
    <summarizedField>Visit_ID__c.Trip_Expenses__c</summarizedField>
    <summaryForeignKey>Visit_ID__c.Visit_Label__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>