force-app/main/default/objects/Client__c/fields/Trip_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Trip_Expenses__c</fullName>
    <label>Trip Expenses</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>