force-app/main/default/objects/Client__c/validationRules/Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won</fullName>
    <active>true</active>
    <errorConditionFormula>IF((ISPICKVAL( Stage__c , &apos;Closed Won&apos;))  &amp;&amp; (ISCHANGED(Name)|| ISCHANGED( Opportunity_Value__c )),TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Cant edit fields, contact manager</errorMessage>
</ValidationRule>